Fix category pages toggle setting button alignment.

--- a/sources/stylesheets/components/_navigation-menus.scss
+++ b/sources/stylesheets/components/_navigation-menus.scss
@@ -146,6 +146,14 @@
     padding-right: 24px;
     padding-left: 24px;
   }
+
+  .menu-item {
+    display: inline-block;
+
+    &.float-right {
+      float: right;
+    }
+  }
 }
 
 /* mobile-menu */
